--- a/app/main.scss
+++ b/app/main.scss
@@ -1,5 +1,6 @@
 @import "./scripts/popup/app";
 @import "./scripts/popup/component";
+@import "./scripts/popup/jsonEditor";
 
 body {
     min-width: 400px;
