--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -1,4 +1,18 @@
 #main {
+  padding: 0 10px;
+
+  .search-container {
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    padding-top: 10px;
+  }
+
+  .warning {
+    margin-left: 7px;
+    color: red;
+  }
+
   .component-wrapper {
     border: 1px solid black;
     border-radius: 4px;
@@ -6,12 +20,8 @@
   }
 
   .search {
-    display: block;
-    padding: 10px 10px 15px;
-    background-color: white;
-    position: fixed;
+    padding: 10px 0 15px;
     height: 40px;
-    width: 100%;
 
     > input {
       padding-left: 15px;
@@ -23,6 +33,6 @@
   }
 
   .component-container {
-    padding-top: 70px;
+    padding-top: 95px;
   }
 }
