--- a/app/scripts/popup/component.scss
+++ b/app/scripts/popup/component.scss
@@ -4,10 +4,6 @@
   min-height: 20px;
   line-height: 20px;
 
-  &:hover {
-    background-color: rgba(47, 119, 196, 0.5);
-  }
-
   .name {
     margin: 5px 10px;
 
@@ -21,15 +17,41 @@
     }
 
     .inspect-button {
+      display: none;
       float: right;
       cursor: pointer;
-      border: 1px solid black;
-      border-radius: 4px;
-      padding: 0 5px;
+      border: 0;
+      border-radius: 28px;
+      padding: 1px 8px;
 
       &:hover {
         background-color: #71a9ff;
       }
+    }
+  }
+
+  &:hover {
+    background-color: rgba(47, 119, 196, 0.5);
+
+    .inspect-button {
+      display: inherit;
+    }
+  }
+
+  .set-state {
+    margin: 10px 5px;
+    background: #3498db;
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    border: 0;
+    border-radius: 28px;
+    font-size: 13px;
+    padding: 2px 10px;
+    text-decoration: none;
+    outline: none;
+
+    &:hover {
+      background: #3cb0fd;
+      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     }
   }
 }
