--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -33,6 +33,58 @@
   }
 
   .component-container {
-    padding-top: 95px;
+    padding-top: 100px;
+
+    &.loading {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  .bubblingG {
+    text-align: center;
+    width: 120px;
+    height: 75px;
+  }
+
+  .bubblingG span {
+    display: inline-block;
+    vertical-align: middle;
+    width: 15px;
+    height: 15px;
+    margin: 38px auto;
+    background: #000456;
+    border-radius: 75px;
+    animation: bubblingG 1s infinite alternate;
+
+    &:first-child {
+      animation-delay: 0s;
+    }
+
+    &:nth-child(2) {
+      animation-delay: 0.3s;
+    }
+
+    &:last-child {
+      animation-delay: 0.6s;
+    }
+  }
+
+  @keyframes bubblingG {
+    0% {
+      width: 15px;
+      height: 15px;
+      background-color: #000456;
+      transform: translateY(0);
+    }
+
+    100% {
+      width: 36px;
+      height: 36px;
+      background-color: #FFFFFF;
+      transform: translateY(-32px);
+    }
+
   }
 }
