--- a/app/main.scss
+++ b/app/main.scss
@@ -1,6 +1,7 @@
 @import "./scripts/popup/app";
 @import "./scripts/popup/component";
 @import "./scripts/popup/jsonEditor";
+@import "./packages/options/app";
 
 body {
     min-width: 400px;
