--- a/app/packages/options/app.scss
+++ b/app/packages/options/app.scss
@@ -23,3 +23,13 @@
     margin-bottom: 5px;
   }
 }
+
+.version {
+  label {
+    display: block;
+  }
+
+  > button {
+    margin-top: 10px;
+  }
+}
