--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -8,6 +8,24 @@
     padding-top: 10px;
   }
 
+  .start-debug-btn {
+    display: inline-block;
+    padding: 4px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    color: #ffffff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    background: #5bb75b linear-gradient(to bottom, #62c462, #51a351) repeat-x;
+    border-color: #51a351 #51a351 #387038;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1);
+  }
+
   .warning {
     margin-left: 7px;
     color: red;
