moved options to scripts folder

--- a/app/main.scss
+++ b/app/main.scss
@@ -1,7 +1,7 @@
 @import "./scripts/popup/app";
 @import "./scripts/popup/component";
 @import "./scripts/popup/jsonEditor";
-@import "./packages/options/app";
+@import "scripts/options/app";
 
 body {
     min-width: 400px;
