--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -1,63 +1,23 @@
 #main {
   padding: 0 10px;
 
-  .search-container {
-    position: fixed;
-    background-color: white;
-    width: 100%;
-    padding-top: 10px;
+  > button {
+    margin: 10px 0;
   }
 
-  .start-debug-btn {
-    display: inline-block;
-    padding: 4px 12px;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-    color: #ffffff;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background: #5bb75b linear-gradient(to bottom, #62c462, #51a351) repeat-x;
-    border-color: #51a351 #51a351 #387038;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1);
+  > div {
+    margin-bottom: 10px;
   }
 
-  .warning {
-    margin-left: 7px;
-    color: red;
+  .components {
+    overflow-y: auto;
+    max-height: 480px;
   }
 
-  .component-wrapper {
-    border: 1px solid black;
-    border-radius: 4px;
-    margin: 0 10px 10px;
-  }
-
-  .search {
-    padding: 10px 0 15px;
-    height: 40px;
-
-    > input {
-      padding-left: 15px;
-      height: 30px;
-      line-height: 30px;
-      width: calc(100% - 45px);
-      font-size: 14px;
-    }
-  }
-
-  .component-container {
-    padding-top: 106px;
-
-    &.loading {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+  .loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .bubblingG {
