--- a/app/scripts/popup/component.scss
+++ b/app/scripts/popup/component.scss
@@ -1,57 +1,38 @@
 .component {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  min-height: 20px;
-  line-height: 20px;
 
-  .name {
-    margin: 5px 10px;
-
-    & + div {
-      margin-top: 10px;
-      background-color: white;
-    }
-
-    .component-name {
-      margin-right: 15px;
-    }
-
-    .inspect-button {
-      display: none;
-      float: right;
-      cursor: pointer;
-      border: 0;
-      border-radius: 28px;
-      padding: 1px 8px;
-
-      &:hover {
-        background-color: #71a9ff;
-      }
-    }
+  &.selected .panel-heading {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
   }
 
-  &:hover {
-    background-color: rgba(47, 119, 196, 0.5);
-
-    .inspect-button {
-      display: inherit;
-    }
+  .panel {
+    margin-bottom: 5px;
   }
 
-  .set-state {
-    margin: 10px 5px;
-    background: #3498db;
-    background-image: linear-gradient(to bottom, #3498db, #2980b9);
-    border: 0;
-    border-radius: 28px;
-    font-size: 13px;
-    padding: 2px 10px;
-    text-decoration: none;
-    outline: none;
+  .panel-heading {
+    padding: 8px 15px;
 
     &:hover {
-      background: #3cb0fd;
-      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+      background-color: rgba(210, 210, 210, 0.8);
+    }
+  }
+
+  .panel-title {
+    font-size: 14px;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+
+    .btn {
+      &:first-of-type {
+        margin-right: 10px;
+      }
+
+      padding: 1px 6px;
     }
   }
 }
