fix recognizing wix sites in order to re-enable the auto redirect feature show 'Apply Options' button only when there are options to apply

--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -5,8 +5,12 @@
     margin: 10px 0;
   }
 
-  > div {
+  .search-box {
     margin-bottom: 10px;
+
+    &.only-search {
+      margin-top: 10px;
+    }
   }
 
   .components {
