add openEditor button and some modifications to the checking whether the site is wix site or not

--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -1,8 +1,12 @@
 #main {
   padding: 0 10px;
 
-  > button {
+  .btn-toolbar {
     margin: 10px 0;
+
+    .btn {
+      margin: 0 5px;
+    }
   }
 
   .search-box {
