--- a/app/scripts/options/app.scss
+++ b/app/scripts/options/app.scss
@@ -15,7 +15,8 @@
 
     .col-menu {
       &:first-of-type {
-        margin-right: 20px;
+        padding-bottom: 20px;
+        margin: 0 20px 20px 0;
         border: 1px solid black;
         border-radius: 10px;
 
