--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -7,6 +7,13 @@
     .btn {
       margin: 0 5px;
     }
+
+    img {
+      margin-top: 3px;
+      float: right;
+      width: 25px;
+      cursor: pointer;
+    }
   }
 
   .search-box {
