refactor updateLatestVersions to return Promise and set error message when it fails

--- a/app/scripts/options/app.scss
+++ b/app/scripts/options/app.scss
@@ -9,7 +9,7 @@
       }
     }
 
-    .container {
+    > .container {
       width: 95%;
     }
 
@@ -20,8 +20,10 @@
         border: 1px solid black;
         border-radius: 10px;
 
-        button {
-          margin: 15px 0;
+        .error-msg {
+          margin-top: 15px;
+          font-weight: bold;
+          color: red;
         }
       }
 
