add a new button to switch between desktop/mobile in published site

--- a/app/main.scss
+++ b/app/main.scss
@@ -1,5 +1,6 @@
 @import "./scripts/popup/app";
 @import "./scripts/popup/component";
+@import "./scripts/popup/switchMode";
 @import "./scripts/popup/jsonEditor";
 @import "scripts/options/app";
 
