popup can show the version selector if it user choose it in settings

--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -25,6 +25,15 @@
       }
     }
 
+    .version-selector {
+      display: flex;
+      flex-direction: row;
+
+      > div:first-child {
+        margin-right: 20px;
+      }
+    }
+
     .components {
       overflow-y: auto;
       max-height: 480px;
