add error message when failed to update versions in popup window

--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -42,6 +42,11 @@
       }
     }
 
+    .error-msg {
+      font-weight: bold;
+      color: red;
+    }
+
     .components {
       overflow-y: auto;
       max-height: 480px;
