add feature presets selection for auto select versions and experiments

--- a/app/scripts/options/app.scss
+++ b/app/scripts/options/app.scss
@@ -25,6 +25,22 @@
           font-weight: bold;
           color: red;
         }
+
+        .apply-feature {
+          background-color: #3b99fc;
+          margin-top: 5px;
+          margin-right: 5px;
+          outline: none;
+
+          &:hover {
+            background-color: #84befb;
+          }
+        }
+
+        .update-features {
+          float: right;
+          outline: none;
+        }
       }
 
       height: 100%;
