--- a/app/scripts/popup/app.scss
+++ b/app/scripts/popup/app.scss
@@ -5,15 +5,25 @@
     .btn-toolbar {
       margin: 10px 0;
 
-      .btn {
+      > .btn {
         margin: 0 5px;
       }
 
-      img {
+      > img {
         margin-top: 3px;
         float: right;
         width: 25px;
         cursor: pointer;
+      }
+
+      > .impersonate {
+        padding: 5px;
+        margin-left: 0;
+        margin-right: 0;
+
+        img {
+          height: 22px;
+        }
       }
     }
 
