Add reset settings button

--- a/app/scripts/options/app.scss
+++ b/app/scripts/options/app.scss
@@ -86,6 +86,10 @@
       .form-group {
         margin-bottom: 0;
       }
+
+      .reset-settings {
+        margin-top: 15px;
+      }
     }
 
     .current-version {
